--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,6 +1,4 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
+# Dependencies
 node_modules/
 
 # Expo
@@ -19,7 +17,18 @@ web-build/
 # Metro
 .metro-health-check*
 
-# debug
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.env*.local
+
+# TypeScript
+*.tsbuildinfo
+
+# Debug
 npm-debug.*
 yarn-debug.*
 yarn-error.*
@@ -27,11 +36,3 @@ yarn-error.*
 # macOS
 .DS_Store
 *.pem
-
-# local env files
-.env*.local
-
-# typescript
-*.tsbuildinfo
-
-app-example
