--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,13 @@ pnpm-debug.log*
 
 # AI Configs
 .claude/settings.local.json
+
+# Expo & React Native
+node_modules/
+.expo/
+dist/
+web-build/
+
+# Android/iOS builds
+android/
+ios/
